# doc2md

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
src/doc2md/: __init__.py  analyzer.py  config.py  converter.py  serializers.py  utils.py
tests/: conftest.py  test_convert.py  test_dtvp_debug.py  test_engine_selection.py  test_standalone_image.py
tests/samples/: sample_with_images.docx  sample_with_images.pptx
